changed parts update

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,8 +29,8 @@
               <a class="nav-link" href="/about"><h4>About</h4></a>
             </li>
             <% if (loggedIn) {%>
-              <li class="nav-item px-5 py-1">
-                <input class="form-control" type="text" value="Editable" aria-label="if editable" disabled readonly>
+              <li class="nav-item px-5 pt-2">
+                <span class="badge rounded-pill bg-success">Editable</span>
               </li>
             <% } %>
           </ul>
