--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,13 +16,13 @@
         </div>
         
         <div class="row" style="margin: 20px;">
-            <i class="far fa-building" style='font-size:24px; margin-bottom: 20px;'>
+            <i class="fa fa-map-marker" style='font-size:24px; margin-bottom: 20px;'>
                 <a href="https://www.google.com/maps/place/116+Villa+St,+Waltham,+MA+02453/@42.3721247,-71.2598888,17z/data=!3m1!4b1!4m5!3m4!1s0x89e3833bfe2b918d:0x7a9360efcd686713!8m2!3d42.3721208!4d-71.2577001">
                  Waltham, MA</a>
             </i><br>
 
             <i class="fa fa-linkedin" style='font-size:24px; margin-bottom: 20px;'>
-                <a href="www.linkedin.com/in/zheng-zheng-082420217">
+                <a href="https://www.linkedin.com/in/zheng-zheng-082420217/">
                     Linkedin</a>
             </i>
 
